pkg/manifests/ext_proc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-ext-proc
  labels:
    app: grpc-ext-proc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-ext-proc
  template:
    metadata:
      labels:
        app: grpc-ext-proc
    spec:
      containers:
      - name: grpc-ext-proc
        image: us-docker.pkg.dev/kaushikmitra-gke-dev/kaushikmitra-docker-repo/llm-ig-pp-ext-proc 
        args:
        - -podIPs
        - "10.60.0.7:8000,10.60.1.34:8000,10.60.2.89:8000"
        - -certPath
        - "/app/certs"
        - -v
        - "3"
        ports:
        - containerPort: 8000
        volumeMounts:
            - name: grpc-ext-proc-secret
              mountPath: /app/certs
        readinessProbe:
              httpGet:
                path: /healthz
                port: 8080
      volumes:
        - name: grpc-ext-proc-secret
          secret:
            secretName: grpc-ext-proc-secret
            items:
              - key: tls.crt
                path: server.crt
              - key: tls.key
                path: server.key
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-ext-proc
  namespace: default
spec:
  ports:
    - port: 9002
      targetPort: 9002
  selector:
    app: grpc-ext-proc
