pkg/manifests/gateway.yaml

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: instance-gateway
spec:
  gatewayClassName: instance-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 8080
    - name: llm-gw
      protocol: HTTP
      port: 8081
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: instance-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm-route
spec:
  parentRefs:
    - name: instance-gateway
      sectionName: llm-gw
  rules:
  - backendRefs:
      - group: gateway.envoyproxy.io
        kind: Backend
        name: backend-dummy
    timeouts:
      request: "24h"
      backendRequest: "24h"
